--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
     "protobufjs": "^7.2.3",
+    "protobufjs-cli": "^1.1.1",
     "winston": "^3.8.2"
   },
   "devDependencies": {
