--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/swagger-ui-dist": "^3.30.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
     "protobufjs": "^7.2.3",
     "protobufjs-cli": "^1.1.1",
+    "swagger-ui-dist": "^4.18.3",
     "winston": "^3.8.2"
   },
   "devDependencies": {
