Finished setting things up for adding an SQL connection

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mysql": "^2.15.21",
     "@types/swagger-ui-dist": "^3.30.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^9.0.0",
+    "mysql": "^2.18.1",
     "protobufjs": "^7.2.3",
     "protobufjs-cli": "^1.1.1",
     "sha256": "^0.2.0",
