--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
+    "nocache": "^3.0.4",
     "protobufjs": "^7.2.3",
     "protobufjs-cli": "^1.1.1",
     "sha256": "^0.2.0",
