Added options to disable persistent logs

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ NODE_ENV=development
 # The port that the server runs on
 PORT=6969
 
+# Turns on/off persistent debug logs
+LOG_PERSISTENT_DEBUG=1
+LOG_PERSISTENT_ERROR=1
+LOG_PERSISTENT_EXCEPTIONS=1
 
 # The JWT secret key
 JWT_SECRET=123123123jsjsjsjs123123123ufjsh3wui1234124
