--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "protobufjs": "^7.2.3",
     "protobufjs-cli": "^1.1.1",
     "sha256": "^0.2.0",
-    "swagger-ui-dist": "^4.18.3",
+    "swagger-ui-express": "^4.6.3",
     "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.3",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "concurrently": "^8.0.1",
