--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "start": "node --enable-source-maps dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon --enable-source-maps -q dist/index.js\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/mysql": "^2.15.21",
-    "@types/swagger-ui-dist": "^3.30.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
@@ -21,15 +19,15 @@
     "mysql": "^2.18.1",
     "nocache": "^3.0.4",
     "path-to-regexp": "^6.2.1",
-    "protobufjs": "^7.2.3",
-    "protobufjs-cli": "^1.1.1",
     "sha256": "^0.2.0",
     "swagger-ui-express": "^4.6.3",
-    "winston": "^3.8.2"
+    "tslog": "^4.8.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^20.2.3",
+    "@types/swagger-ui-dist": "^3.30.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
