--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "path-to-regexp": "^6.2.1",
     "sha256": "^0.2.0",
     "swagger-ui-express": "^4.6.3",
-    "tslog": "^4.8.2"
+    "tslog": "^4.8.2",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -29,6 +30,7 @@
     "@types/node": "^20.2.3",
     "@types/swagger-ui-dist": "^3.30.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "concurrently": "^8.0.1",
