--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npx tsc",
+    "watch": "npx tsc --watch",
     "start": "node --enable-source-maps dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon --enable-source-maps -q dist/index.js\""
   },
@@ -14,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "find-process": "^1.4.7",
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
