Added portproxy to enable listening on two ports at the same time

--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,6 @@ NODE_ENV=development
 # The port that the server runs on
 PORT=6969
 
-# Turns on/off persistent debug logs
-LOG_PERSISTENT_DEBUG=1
-LOG_PERSISTENT_ERROR=1
-
 # The JWT secret key
 JWT_SECRET=123123123jsjsjsjs123123123ufjsh3wui1234124
 JWT_ALLOW_ALG_NONE=1
@@ -25,3 +21,6 @@ MYSQL_USER=root
 # Token settings (allows PHP-style period expressions)
 TOKEN_TTL_ACCESS=P30I# 30 minutes
 TOKEN_TTL_REFRESH=P1M# 1 month
+
+# Whether to also listen on X port
+# ADD_PORT=80
